--- a/index.html
+++ b/index.html
@@ -74,3 +74,6 @@ layout: default
 		</div>
 	</div>
 </div>
+
+<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=c9d3e7&w=590&t=tt&d=pOfQSZ874KxCn2hxzcWmpTOGeC7yDS9y9fCURqWF89g&co=2b2f35&cmn=f0cd17&cmo=731122&ct=ffffff"></script>
+
